# eReg

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tests_full.py
.github/workflows/: autoformat.yaml  lint.yaml  tests.yml
atlases/: README.md
atlases/mni152/: README.md
atlases/sri24/: README.md
data/: default_rigid.yaml  sample_config.yaml  tcia_aaac_t1ce_transform.mat
docs/source/: conf.py  ereg.rst  ereg.utils.rst  index.rst
ereg/: __init__.py  functional.py  hello_world.py  registration.py  utilities.py
ereg/cli/: run.py
ereg/configurations/: default_config.yaml  default_rigid.yaml  sample_config.yaml
ereg/utils/: __init__.py  citation_reminder.py  io.py  metrics.py
unit_tests/: test_ereg.py  test_full.py
