[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "eReg"
version = "0.0.0"
description = "efficient, pythonic cross-platform image registrations"
authors = ["Sarthak Pati", "Florian Kofler"]
repository = "https://github.com/BrainLesion/eReg"
homepage = "https://github.com/BrainLesion/eReg"
documentation = "https://eReg.readthedocs.io/"
readme = "README.md"


# Add the exclude field directly under [tool.poetry]
exclude = ["examples", "benchmark"]

[tool.poetry.dependencies]
numpy = "^1.22.0"
python = "^3.9"
PyYAML = "^6.0.1"
rich = "^13.6.0"
scikit-image = "^0.22.0"
tqdm = "^4.64.1"
SimpleITK = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.6.0"

# [tool.poetry.group.docs]
# optional = true

# [tool.poetry.group.docs.dependencies]
# Sphinx = ">=7.0.0"
# sphinx-copybutton = ">=0.5.2"
# sphinx-rtd-theme = ">=1.3.0"
# myst-parser = ">=2.0.0"
